--- a/project/web/templates/diagram/css/additional.css
+++ b/project/web/templates/diagram/css/additional.css
@@ -52,3 +52,17 @@
 .features {
     height: 76px;
 }
+
+.home-content h2.smaller {
+    font-size: 38px;
+}
+@media (min-width: 768px) and (max-width: 991px) {
+    .home-content h2 {
+        font-size:30px;
+    }
+}
+@media (max-width: 767px) {
+    .home-content h2 {
+        font-size: 26px
+    }
+}
