--- a/project/views/templates/diagram/base.html.twig
+++ b/project/views/templates/diagram/base.html.twig
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/templates/diagram/css/main.css">
     <link rel="stylesheet" href="/templates/diagram/css/responsive.css">
     <link rel="stylesheet" href="/templates/diagram/css/additional.css">
+    <link rel="stylesheet" href="/templates/diagram/fonts/flaticon/flaticon.css">
 
     {% block stylesheets %}{% endblock %}
 
