--- a/project/views/templates/diagram/content.html.twig
+++ b/project/views/templates/diagram/content.html.twig
@@ -1,12 +1,12 @@
 {% macro defineJsComponentList() %}
     <script>
         var componentsList = {
-            'SliderHeadingSection' :     'Шапка со слайдером',
-            'SimpleHeadingSection' :     'Простая шапка',
-            'FeaturesSection'      :     'Список элементов на сером фоне',
+            'SliderHeadingSection' :    'Шапка со слайдером',
+            'SimpleHeadingSection' :    'Простая шапка',
+            'FeaturesSection'      :    'Список элементов на сером фоне',
             'Features2Section'     :    'Список элементов на тёмном фоне',
             'Features3Section'     :    'Список элементов побольше',
-            'PortfolioSection'     :    'Портфлоио (список элементов)',
+            'PortfolioSection'     :    'Портфолио (список элементов)',
             'OpinionSection'       :    'Отзывы (список элементов)',
             'PhotosSection'        :    'Фотки (список элементов)',
             'SendMessageSection'   :    'Отправка сообщений',
