--- a/project/views/common/layouts/head.html.twig
+++ b/project/views/common/layouts/head.html.twig
@@ -9,6 +9,14 @@
         <link href="/plugins/edit-tools/edit-tools.css" rel="stylesheet">
         <link href="/plugins/slide-panel/style.css" rel="stylesheet">
         <link href="/plugins/fancybox-3.0/dist/jquery.fancybox.min.css" rel="stylesheet">
+        <link href="/plugins/bootstrap-iconpicker-1.9.0/dist/css/bootstrap-iconpicker.min.css" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/typicons/2.0.9/typicons.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/1.3.1/css/weather-icons.min.css"/>
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/2.8.0/css/flag-icon.min.css"/>
     {% endif %}
 {% endblock %}
 
@@ -21,6 +29,11 @@
         <script src="/plugins/bootstrap3-editable/js/link-editable.js"></script>
         <script src="/plugins/edit-tools/edit-tools.js"></script>
         <script src="/plugins/fancybox-3.0/dist/jquery.fancybox.min.js"></script>
+        <script src="/plugins/bootstrap-iconpicker-1.9.0/dist/js/bootstrap-iconpicker-iconset-all.min.js"></script>
+        {% if template == 'diagram' %}
+            <script src="/templates/diagram/fonts/flaticon/flaticon-iconset.js"></script>
+        {% endif %}
+        <script src="/plugins/bootstrap-iconpicker-1.9.0/dist/js/bootstrap-iconpicker.js"></script>
 
     {% endif %}
 
