--- a/project/views/templates/diagram/base.html.twig
+++ b/project/views/templates/diagram/base.html.twig
@@ -187,7 +187,7 @@
 
 {% block pageSettings %}{% endblock %}
 
-<script>var stopSlider = {{ editMode ? 'true' : 'false' }};</script>
+<script>var editMode = {{ editMode ? 'true' : 'false' }};</script>
 
 <!-- script -->
 <script src="/templates/diagram/js/jquery.min.js"></script>
