--- a/project/views/templates/diagram/base.html.twig
+++ b/project/views/templates/diagram/base.html.twig
@@ -192,9 +192,9 @@
 <script src="/templates/diagram/js/magnific-popup.min.js"></script>
 <script src="/templates/diagram/js/jquery.backstretch.min.js"></script>
 <script src="/templates/diagram/js/custom.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-<script src="/templates/diagram/js/gmaps.min.js"></script>
-<script src="/templates/diagram/js/gmaps.settings.js"></script>
+{#<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>#}
+{#<script src="/templates/diagram/js/gmaps.min.js"></script>#}
+{#<script src="/templates/diagram/js/gmaps.settings.js"></script>#}
 
 {% block javascripts %}{% endblock %}
 
