--- a/views/common/layouts/admin.html.twig
+++ b/views/common/layouts/admin.html.twig
@@ -5,6 +5,6 @@
 
 {% block body %}
     <div class="admin-panel-wrapper">
-        {{ admin.admin(editMode, allPages, menu, settings, formfields) }}
+        {{ admin.admin(editMode, dataType, pages, menu, settings, formfields) }}
     </div>
 {% endblock %}
