--- a/views/common/layouts/body.html.twig
+++ b/views/common/layouts/body.html.twig
@@ -1,21 +1,22 @@
 {% extends '/common/layouts/head.html.twig' %}
 {% import '/common/components/admin.html.twig' as admin %}
 {% import '/common/components/data.html.twig' as data %}
+{% import '/common/components/page.html.twig' as pages %}
 {% import '/template/content.html.twig' as content %}
 
-{% block title %}{{ page.title | raw }}{% if page.title | length > 0 and settings.title.value | length > 0 %} | {% endif %}{{ settings.title.value }}{% endblock %}
+{% block title %}{% if item and item.title | length > 0 %}{{ item.title }} | {% endif %}{{ page.title | raw }}{% if page.title | length > 0 and settings.title.value | length > 0 %} | {% endif %}{{ settings.title.value }}{% endblock %}
 
 {% block body %}
 
     {#{{ admin.pageProperties(page, editMode) }}#}
 
     {% for key, section in page.sections %}
-        {{ content.component(key, section, page._id, 'sections.' ~ key, editMode, settings) }}
+        {{ content.component(key, section, page._id, 'sections.' ~ key, editMode, settings, additional, page.display, item) }}
     {% endfor %}
 
     {% if editMode %}
         <section class="section text-center add-component-button-wrapper{% if page.sections | length == 0 %} top-wrapper{% endif %}">
-            {{ data.addComponentModal(page._id, editMode) }}
+            {{ pages.addComponentModal(page._id, editMode) }}
         </section>
     {% endif %}
 
