--- a/web/plugins/edit-tools/edit-tools.css
+++ b/web/plugins/edit-tools/edit-tools.css
@@ -17,6 +17,11 @@ reel span {
     border: 1px dashed!important;
 }
 
+ae span {
+    cursor: pointer;
+    border: 1px dashed!important;
+}
+
 .modal-settings input {
     padding-left: 10px!important;
 }
