--- a/views/common/components/page.html.twig
+++ b/views/common/components/page.html.twig
@@ -13,6 +13,11 @@
     {{ data.textarea('page', value, id, path, editMode, inModal) }}
 {%- endmacro -%}
 
+{%- macro code(value, id, path, editMode = false, inModal = false) -%}
+    {% import '/common/components/data.html.twig' as data %}
+    {{ data.code('page', value, id, path, editMode, inModal) }}
+{% endmacro %}
+
 {%- macro a(value, id, path, editMode = false, attrs = {}) -%}
     {%- import '/common/components/data.html.twig' as data -%}
     {%- if editMode -%}
@@ -119,6 +124,11 @@
                                     <tr>
                                         <td>{{ editor.title }}</td>
                                         <td style="width:40%;">{{ data.textarea(collection, cValue, itemId, cPath, editMode, true) }}</td>
+                                    </tr>
+                                {% elseif editor.type == "code" %}
+                                    <tr>
+                                        <td>{{ editor.title }}</td>
+                                        <td style="width:40%;">{{ data.code(collection, cValue, itemId, cPath, editMode, true) }}</td>
                                     </tr>
                                 {% elseif editor.type == "select" %}
                                     <tr>
