--- a/views/common/layouts/head.html.twig
+++ b/views/common/layouts/head.html.twig
@@ -28,6 +28,7 @@
 
         <script src="/plugins/bootstrap3-editable/js/bootstrap-editable.js"></script>
         <script src="/plugins/bootstrap3-editable/js/link-editable.js"></script>
+        <script src="/plugins/bootstrap3-editable/js/code-editable.js"></script>
         <script src="/plugins/edit-tools/edit-tools.js"></script>
         <script src="/plugins/fancybox-3.0/dist/jquery.fancybox.min.js"></script>
         <script src="/plugins/bootstrap-iconpicker-1.9.0/dist/js/bootstrap-iconpicker-iconset-all.min.js"></script>
